--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.8"
 
 services:
   coursematerial:
-    image: devopsdockeruh/coursepage
+    # image: devopsdockeruh/coursepage
+    image: elvari/coursepage
     ports:
       - 4000:80
     container_name: coursematerial
